# suffix_tree

./: CMakeLists.txt  LICENSE  README.md  SuffixTreeConfig.h  SuffixTreeConfig.h.in
include/test/: substrings_input02.h  substrings_input04.h  substrings_input06.h  testing_utils.h
src/: string_substrings.cpp
